# yggdrasill-applications

./: .gitignore  README.md  discord.opam  discord.opam.template  dune-project  elasticmq.opam  flake.nix  https.opam  httpx.opam  minio.opam  nextcloud.opam  nidhoggr.Dockerfile  nidhoggr.opam  nidhoggr.opam.template  ratatoskr.Dockerfile  ratatoskr.opam  ratatoskr.opam.template
.github/actions/build-and-push/: action.yml
.github/workflows/: ratatoskr.yml
lib/discord/: application.ml  channel.ml  client.ml  common.ml  config.ml  discord.ml  dune  emoji.ml  entitlement.ml  guild.ml  interaction.ml  interaction_response.ml  role.ml  slash_command.ml  team.ml  user.ml
lib/elasticmq/: dune
lib/https/: dune  https.ml
lib/httpx/: dune  httpx.ml
lib/minio/: auth.ml  client.ml  config.ml  dune  minio.ml
lib/nextcloud/: config.ml  dune  nextcloud.ml
lib/nidhoggr/: dune  encoder.ml  nidhoggr.ml
ratatoskr/: commands.ml  config.ml  dune  ratatoskr.ml
