(executable
  (public_name ratatoskr)
  (name ratatoskr)
  (libraries 
    eio
    eio_main
    eio.unix
    cohttp
    cohttp-eio
    http
    fmt
    unix
    logs.fmt
    logs.threaded
    tls-eio
    mirage-crypto-rng-eio
    discord
    nidhoggr
  )
  (preprocess (pps ppx_yojson_conv))
  (package ratatoskr))
